[UOF-44,45,46] Fixed the navbar z-index.
It will now no longer be blocked by other components.

--- a/code/EmpowerUAfrica/client/src/components/components/navbar/navbar.css
+++ b/code/EmpowerUAfrica/client/src/components/components/navbar/navbar.css
@@ -1,7 +1,3 @@
-* {
-    z-index: 10;
-}
-
 /* navigation bar body */
 .navbar {
     font-family: serif, Georgia, 'Times New Roman', Times;
@@ -10,6 +6,7 @@
     min-height: 70px;
     position: fixed;
     top: -1px;
+    z-index:10; 
 }
 
 .navbar-grid {
